La primera parte del archivo html del inicio

--- a/index.html
+++ b/index.html
@@ -2,12 +2,41 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="CSS/style.css"
+    <link rel="stylesheet" href="CSS/style.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Inicio</title>
 </head>
-<body>
+<body class="fondo1 centrar">
+
+    <!--Menú de navegación-->
+    <nav class="margin">
+        <!--Imagen de logo-->
+        <img src="https://i.postimg.cc/Gp03GJQR/LOGOSENApequenio.png">
+        <a href="index.html" class="letra_mediana boton boton_naranja">Inicio</a>
+        <!--Reemplazar nombres de documento-->
+        <a href="nombredoc.html" class="letra_mediana boton boton_naranja">Sobre Nosotros</a>
+        <a href="nombredoc.html" class="letra_mediana boton boton_naranja">Iniciar Sesión</a>
+        <a href="nombredoc.html" class="letra_mediana boton boton_naranja">Registrarse</a>
+    </nav>
+
+    <!--La sección donde se vera el eslogan-->
+    <section class="cont_eslogan">
+        <!--Imagen de chica escribiendo frente a su computador-->
+    <img src="https://i.postimg.cc/pXFG9Wh7/pexels-olya-kobruseva-6487203.jpg" width="40%">
+    <p class="letra_extragrande eslogan">Eslogan</p>
+    </section>
+
+    <!--La sección donde se vera el más información-->
+    <section class="cont_informacion centrar">
+        <div class="informacion">
+          <p class="letra_mediana">Para obtener más información sobre nuestro aplicativo de click aquí:</p>
+          <!--Reemplazar nombre de documento-->
+          <a href="nombredoc.html" class="boton boton_naranja letra_mediana">Más información</a>
+        </div>
+        <!--Imagen de personas leyendo libros-->
+          <img src="https://i.postimg.cc/7P7thPTR/pexels-cottonbro-6334877.jpg"width="35%">
+    </section>
     
 </body>
 </html>
