--- a/clase.html
+++ b/clase.html
@@ -1,22 +1,79 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <link rel="stylesheet" href="styleclase.css">
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="CSS/stylesb.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mis clases</title>
 </head>
-<body>
-    <a href="">Atrás</a>
-    <h2>Añadir clase</h2>
-    <form  action=""></form>
-        <section class="tabla">
-            <p>Ingresar código de la clase 
-                <div><input class="space" type="text" placeholder="Ingresar código"></div></p>
-            </p>
-           <input class="button" type="submit" value="Ingresar"> 
-        </section>
-    </form>
+<body class="fondo2 centrar">
+    <!--Cabecera-->
+    <header class="cabecera centrar">
+    <img class="logo" src="https://i.postimg.cc/Gp03GJQR/LOGOSENApequenio.png">
+    <h1 class="inline_block letra_grande">Clase 1</h1>
+    </header>
+    <!--Botón para volver a la página anterior y calendario-->    
+    <ul class="calen-cla">
+    <li><a href="nombredoc.html" class="boton_naranja2  boton">Atrás</a></li>
+    <li><input type="date" name="calendario" step="1" min="2018-01-01" max="2021-12-31" value="2021-07-19"></li>
+    </ul>
+    <!--Información del cronograma de clases-->
+    <main  class="inline_block cont_info_perfil clase-tabla">
+        <table id="tabla">
+            <tbody>
+                <tr style="height: 50px;">
+                    <th colspan="1" style="padding: 6px; text-align: center;"><strong>FECHA</strong></th>
+                    <th colspan="1" style="padding: 6px; text-align: center;"><strong>ACTIVIDAD</strong></th>
+                    <th colspan="1" style="padding: 6px; text-align: center;"><strong>ESTADO</strong></th>
+                    <th colspan="1" style="padding: 6px; text-align: center;"><strong>CALIFICACIÓN</strong></th>
+                    
+                 </tr>
+            <tr>
+                <td width="150px" style="padding: 6px; text-align: center;">15-04-2021</td>
+                <td width="350px" style="padding: 6px;">Actividad 01</td>
+                <td width="200px" style="padding: 6px; text-align: center;">Inactivo</td>
+                <td width="200px" style="padding: 6px; text-align: center;">75</td>
+            </tr>
+            <tr>
+                <td width="150px" style="padding: 6px; text-align: center;">15-05-2021</td>
+                <td width="350px" style="padding: 6px;">Actividad 02</td>
+                <td width="200px" style="padding: 6px; text-align: center;">Inactivo</td>
+                <td width="200px" style="padding: 6px; text-align: center;">100</td>
+            </tr>
+            <tr>
+                <td width="150px" style="padding: 6px; text-align: center;">08-06-2021</td>
+                <td width="350px" style="padding: 6px;">Actividad 03</td>
+                <td width="200px" style="padding: 6px; text-align: center;">Inactivo</td>
+                <td width="200px" style="padding: 6px; text-align: center;">90</td>
+            </tr>
+            <tr>
+                <td width="150px" style="padding: 6px; text-align: center;">28-06-2021</td>
+                <td width="350px" style="padding: 6px;">Actividad 04</td>
+                <td width="200px" style="padding: 6px; text-align: center;">Activo</td>
+                <td width="200px" style="padding: 6px; text-align: center;"></td>
+            </tr>
+            <tr>
+                <td width="150px" style="padding: 6px; text-align: center;">30-06-2021</td>
+                <td width="350px" style="padding: 6px;">Actividad 05</td>
+                <td width="200px" style="padding: 6px; text-align: center;">Activo</td>
+                <td width="200px" style="padding: 6px; text-align: center;"></td>
+            </tr>
+            <tr>
+                <td width="150px" style="padding: 6px; text-align: center;">03-07-2021</td>
+                <td width="350px" style="padding: 6px;">Actividad 06</td>
+                <td width="200px" style="padding: 6px; text-align: center;">Activo</td>
+                <td width="200px" style="padding: 6px; text-align: center;"></td>
+            </tr>
+            <tr>
+                <td width="150px" style="padding: 6px; text-align: center;">10-07-2021</td>
+                <td width="350px" style="padding: 6px;">Actividad 07</td>
+                <td width="200px" style="padding: 6px; text-align: center;">Activo</td>
+                <td width="200px" style="padding: 6px; text-align: center;"></td>
+            </tr>
+            </tbody>
+        </table>
+    </main>
+</main>
 </body>
 </html>
