Se enlazaron las paǵinas y se arreglaron errores

--- a/Sobre_nosotros.html
+++ b/Sobre_nosotros.html
@@ -2,7 +2,7 @@
 <header>
 <section>
 <a id="logo" target="_blank"><img src="https://i.postimg.cc/Gp03GJQR/LOGOSENApequenio.png%22%3EPlanner%22%3E"></a>
-<link rel="stylesheet" href="stylenosotros.css">
+<link rel="stylesheet" href="CSS/stylenosotros.css">
 <title>Sobre nosotros</title>
 <label for="toggle-1" class="style.css"><ul><li></li> <li></li> <li></li></ul></label>
 <input type="checkbox" id="toggle-1">
