--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <img src="https://i.postimg.cc/Gp03GJQR/LOGOSENApequenio.png">
         <a href="index.html" class="letra_mediana boton boton_naranja">Inicio</a>
         <!--Reemplazar nombres de documento-->
-        <a href="nombredoc.html" class="letra_mediana boton boton_naranja">Sobre Nosotros</a>
+        <a href="Sobre_nosotros.html" class="letra_mediana boton boton_naranja">Sobre Nosotros</a>
         <a href="iniciar_sesion.php" class="letra_mediana boton boton_naranja">Iniciar Sesión</a>
-        <a href="nombredoc.html" class="letra_mediana boton boton_naranja">Registrarse</a>
+        <a href="registrarse.php" class="letra_mediana boton boton_naranja">Registrarse</a>
     </nav>
 
     <!--La sección donde se vera el eslogan-->
