--- a/clases_estudiante.html
+++ b/clases_estudiante.html
@@ -16,13 +16,13 @@
     <!--Menú de Clases Estudiante-->
     <nav class="inline_block menu_perfil letra_mediana">
         <ul>
-        <li><a href="perfil_estudiante.html" class="boton boton_naranja2">Mi perfil</a></li>
-        <li><a href="nombredoc.html" class="boton_naranja2  boton">Clases</a></li>
-        <li><a href="nombredoc.html" class="boton_naranja2  boton">Cronograma</a></li>
-        <li><a href="nombredoc.html" class="boton_naranja2  boton">Quejas y peticiones</a></li>
-        <li><a href="nombredoc.html" class="boton_naranja2  boton">Añadir clase</a></li>
-        <li><a href="nombredoc.html" class="boton_naranja2  boton">Cerrar sesión</a></li>
-        </ul>
+            <li><a href="perfil_estudiante.php" class="boton boton_naranja2">Mi perfil</a></li>
+            <li><a href="clases_estudiante.html" class="boton_naranja2  boton">Clases</a></li>
+            <li><a href="cronograma_general.php" class="boton_naranja2  boton">Cronograma</a></li>
+            <li><a href="Quejas_pet_admin.php" class="boton_naranja2  boton">Quejas y peticiones</a></li>
+            <li><a href="nombredoc.html" class="boton_naranja2  boton">Añadir clase</a></li>
+            <li><a href="iniciar_sesion.php?cerrar_sesion=1" class="boton_naranja2  boton">Cerrar sesión</a></li>
+            </ul>
     </nav>
 <!--Información de Clases Estudiante-->
 <article  class="inline_block cont_cla-est">
