Se modificaron los estilos de añadir clase (estudiante)

--- a/anadir_clase_estudiante.html
+++ b/anadir_clase_estudiante.html
@@ -15,21 +15,8 @@
     <!--Formulario-->
     <form class="formulario border letra_mediana">
         <ul class="text_left">
-        <li><label>Materia:</label></li>
+        <li><label>Ingrese el código de la clase:</label></li>
         <li><input class="input border letra_pequenia"></li>
-        <li><label>Ficha:</label></li>
-        <li><input class="input border letra_pequenia"></li>
-        <li><label>Tipo de documento de profesor:</label></li>
-        <li>
-            <select class="border letra_pequenia input">
-            <option value="TI">Tarjeta de identidad</option>
-            <option value="CC">Cédula de ciudadanía</option>
-            <option value="CE">Cédula de extranjería</option>
-            </select>
-        </li>
-        <li><label>Número de documento de profesor:</label></li>
-        <li><input class="input border letra_pequenia"></li>
-        </ul>
     <!--Botón de enviar-->
         <input type="submit" value="Añadir clase" class="boton boton_naranja centrar letra_mediana">
     </form>
